# spielwiese

./:  .clang-tidy  .gitignore  CMakeLists.txt  README.md  general_tests.cpp  index.js  package.json
src/: main.cpp  promise_method.hpp  promise_worker.hpp  spielwiese.cpp
src/interface_lib/: CMakeLists.txt  RawDataStream.h  RawDataStreamImplementation.hpp  interface_lib.hpp
src/lib_name/: CMakeLists.txt  lib_name_version.hpp.in
src/lib_name/include/: lib.hpp
src/lib_name/include/lib_name/: lib_name.hpp
src/lib_name/src/: lib.cpp  lib.hpp
src/lib_name/src/lib_name2/: CMakeLists.txt  lib_name2_version.hpp.in
src/lib_name/src/lib_name2/include/lib_name2/: lib_name.hpp
src/lib_name/src/lib_name2/src/: lib.cpp  lib.hpp
test/: CMakeLists.txt  general_tests.cpp
tests/: testspielwiese.js
